syntax ="proto3";

option go_package ="./proto";

package greet_service;

service GreetService{
    rpc SayHello (NoParam) returns (HelloResponse);
    rpc SayHelloServerStreaming(NameList) returns (stream HelloResponse);

    rpc GetUserDetails (UserRequest) returns (UserResponse);

    rpc GetEmpDetails (EmpRequest) returns (EmpResponse);

}

message EmpRequest{
    string email=1;
}

message EmpResponse{
    EmpDetails response =1;
}

message EmpDetails{
    string Name=1;
    string Email=2;
    string EmpId=3;
}

message UserRequest{
    string email=1;
}

message UserResponse{
    string email=1;
    string password=2;
}

message NoParam{};

message HelloRequest{
    string name=1;
}

message HelloResponse{
    string message =1;
}

message NameList {
    repeated string names =1;
}
